--- a/404.md
+++ b/404.md
@@ -1,9 +1,11 @@
 ---
 # This is the 404 page of your site.
 layout: not-found
-title: Four, Ohhh Four! (404)
+title: '404: Page Not Found'
 permalink: 404.html
 ---
 
-Write your own 404 page. Arbitrary markdown content allowed.
+Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. [Head back home][homepage] to try finding it again.
 {:.lead}
+
+[homepage]: https://itsgamedevteamy3.github.io/
