Update and rename 2018-10-21-entry-2.md to 2018-10-21-entry-two.md

--- a/jack/_posts/2018-10-21-entry-two.md
+++ b/jack/_posts/2018-10-21-entry-two.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Entry 02: Creating Our Demo Level
+title: Entry 02 — Creating Our Demo Level
 description: >
   Here I go through how we settled on an idea for Project D's demo level.
 author: S00171013
