Just improving my blog posts and my "About" section after proof-reading them.

--- a/jack/_posts/2018-10-21-entry-two.md
+++ b/jack/_posts/2018-10-21-entry-two.md
@@ -33,7 +33,7 @@ The third floor, mostly consisting of ridges or rooftops the player can scale wi
 My primary inspiration for this map idea came from a [level](https://www.youtube.com/watch?v=RYeimusPSX4&feature=youtu.be&t=46) in the third-person shooter [Syphon Filter 2](https://en.wikipedia.org/wiki/Syphon_Filter_2), where the player must cross a bridge high in the mountains and defuse explosives without being spotted by the enemy.
 
 My teammates were happy with my map concept when I showed it to them, so later in the week I worked on creating a prototype map in Unity.
-On the 20th, I finally finished the prototype map in Unity. 3D modelling is not a strong suit of mine so it does look rather blocky, but it should serve its purpose for the time being.
+On the 20th, I finally finished the prototype map. 3D modelling is not a strong suit of mine so it does look rather blocky, but it should serve its purpose for the time being.
 
 ## Prototype Map
 
@@ -42,7 +42,7 @@ A view of the map from afar.
 {:.figure}
 
 ![Starting Area](/assets/img/concept_art/jack/protomap_start.png){:.lead}
-The player starts here, they must scale the ledges to continue.
+The player starts on the white plateau here, they must scale the ledges to continue.
 {:.figure}
 
 ![Clearing](/assets/img/concept_art/jack/protomap_clearing.png){:.lead}
