Entry One complete.

--- a/donnacha/_posts/2018-10-20-entry-one.md
+++ b/donnacha/_posts/2018-10-20-entry-one.md
@@ -14,6 +14,32 @@ Killzone games would be perfect for inspiration.
 ![Helghast Helmet](/assets/img/user/donnacha/helghasthelmet.jpg){:.lead}
 This is an image of a Helghast Soldier. I can see that the helmet was of World War 2 inspiration and the glowing red goggles and
 {:.figure}
+
 ![German WW2 Helmet](/assets/img/user/donnacha/germanWW2Helmet.jpg)
-![German WW2 Gas Mask](/assets/img/user/donnacha/germanGasMask.jpg)
+![German WW2 Gas Mask](/assets/img/user/donnacha/germanGasMask.jpg){:.lead}
+As you can see, Guerilla Games took inspiration from WW2 attire.
+{:.figure}
+
+##Concepts
+
+###Concept 1
+![Enemy Design 1](/assets/img/user/donnacha/concept1.PNG)
+
+###Concept 2
+![Enemy Design 2](/assets/img/user/donnacha/concept2.PNG)
+
+###Concept 3
+![Enemy Design 3](/assets/img/user/donnacha/concept3.PNG)
+
+###Concept 4
+![Enemy Design 4](/assets/img/user/donnacha/concept4.PNG)
+
+###Concept 5
+![Enemy Design 5](/assets/img/user/donnacha/concept5.PNG)
+
+##Finalised Concept
+![Enemy Finalised](/assets/img/user/donnacha/helm.PNG)
+
+#End of Entry One
+
 
