I forgot to rename the blog post.

--- a/jack/_posts/2018-11-19-entry-six.md
+++ b/jack/_posts/2018-11-19-entry-six.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Entry 05 — AI Foundations
+title: Entry 06 — AI Troubles
 description: >
  A small update on my ongoing battle with enemy AI, as well as a quick aside on adding terrain and other 3D assets.
 author: S00171013
