I've added my seventh blog post, I'll proofread it tomorrow. Hopefully nothing's busted.

--- a/jack/_posts/2018-11-19-entry-six.md
+++ b/jack/_posts/2018-11-19-entry-six.md
@@ -50,7 +50,7 @@ Donnacha created some nice terrain for our level this week, so I got to work on 
  I chose to do that instead and have it adhere to the protomap's position. Here's a quick look at the new terrain.
 
 ![From Afar](/assets/img/concept_art/jack/screenshots/terrain_outer_view.png){:.lead}
-A view from afar of the new terrain. The lighting of the entire scene is certainly not final. Our level likely won't be set in daylight.'
+A view from afar of the new terrain. The lighting of the entire scene is certainly not final. Our level likely won't be set in daylight.
 {:.figure}
 
 ![A Closer Look](/assets/img/concept_art/jack/screenshots/terrain_closer_view.png){:.lead}
