Finished proofreading 10th post. Images also added to blog post.

--- a/jack/_posts/2019-02-03-entry-ten.md
+++ b/jack/_posts/2019-02-03-entry-ten.md
@@ -15,18 +15,18 @@ In the week leading up to our first presentation on December 6th (see my [previo
 we were all working fervently to get our demo level ready, at that time we ran into a major source control issue: Unity's Library folder was not being ignored
 by our .gitignore. The Library folder contains numerous files that are auto-generated when you open a Unity project. In short, whenever one of us would open the
 Unity project, 200 or so changes would appear on our GitHub Desktop app right off the bat. These unwanted changes certainly led to us dancing around changes to 
-our test scene the week of the presentation. All the same, we worked through it that week, having to pull tricks like discarding every change and only restoring the ones we wanted, etc.
+our test scene on the week of the presentation. All the same, we worked through it that week, having to pull tricks like discarding every change and only restoring the ones we wanted, etc.
 
 Recently, I took a good look at our .gitignore to try and figure out what went wrong. I soon noticed the issue:
 
-![One Square Bracket](/assets/img/concept_art/jack/screenshots/in_the_spotlight.png){:.lead}
+![One Square Bracket](/assets/img/concept_art/jack/semester_two/mistake.png){:.lead}
 One missing "[" led us to some pain last semester.
 {:.figure}
 
 As seen in the above image, somewhere along the way a square bracket was removed from the line responsible for ignoring the Library folder, hence Git didn't recognise the command and
 saddled us with 200+ unwanted changes at every turn. Here's what our list of changes looked like as soon as we opened Project D:
 
-![Attack of the Metadata](/assets/img/concept_art/jack/screenshots/in_the_spotlight.png){:.lead}
+![Attack of the Metadata](/assets/img/concept_art/jack/semester_two/messy_changes.png){:.lead}
 It's clear that this would lead to some merging issues.
 {:.figure}
 
@@ -34,7 +34,7 @@ As soon as I spotted this issue in the .gitignore, I added the square bracket ba
 I discovered that Git caches what files it tracks and will continue to track the files you no longer want as long as they're still cached. Once I figured that out, I installed Git Bash, got to
 Project D's repo directory and ran the "git rm -r –cached" command. What happened next was a sight for sore eyes:
 
-![DELETE, DELETE, DELETE](/assets/img/concept_art/jack/screenshots/in_the_spotlight.png){:.lead}
+![DELETE, DELETE, DELETE](/assets/img/concept_art/jack/semester_two/delete.png){:.lead}
 The cached Library files are removed once and for all. Good riddance, I say. 
 {:.figure}
 
@@ -45,7 +45,7 @@ When we open Project D now, no changes appear whatsoever (until we make a delibe
 Now that the GitHub nightmare is over, I'm back to my primary duty: fixing the Enemy's AI. As I've said previously, its phases are not transitioning to each other properly. My first move is to redo its Phases from the beginning and try to figure out what went wrong. I've set up a new
 test room for this purpose:
 
-![Test Zone](/assets/img/concept_art/jack/screenshots/in_the_spotlight.png){:.lead}
+![Test Zone](/assets/img/concept_art/jack/semester_two/test_zone.png){:.lead}
 Hopefully we'll see some success in this test environment.
 {:.figure}
 
@@ -53,7 +53,3 @@ Aside from that, we are planning to create a new repo for Project D and import w
 instead of GitHub Desktop as it should make source control easier for us. Wish us luck this semester!
 
 'Til next time.
-
-
-
-'Til next time!
