11th blog post proofread, images added.

--- a/jack/_posts/2019-02-03-entry-ten.md
+++ b/jack/_posts/2019-02-03-entry-ten.md
@@ -9,7 +9,7 @@ author: S00171013
 It's been a while since my last post. Since then, we've had Christmas, New Year's, exams, our Casual Games project to contend with, along with the Global Game Jam
 taking place last weekend (January 25th-27th). (Check out my [game](https://globalgamejam.org/2019/games/lovely-collectibles) here!)
 
-## The Library folder's Tyranny Comes to an End
+## The Library Folder's Tyranny Comes to an End
 
 In the week leading up to our first presentation on December 6th (see my [previous entry](https://itsgamedevteamy3.github.io/jack/2018-12-09-entry-nine/)),
 we were all working fervently to get our demo level ready, at that time we ran into a major source control issue: Unity's Library folder was not being ignored
