--- a/donnacha/_posts/2018-11-16-entry-two.md
+++ b/donnacha/_posts/2018-11-16-entry-two.md
@@ -9,6 +9,7 @@ Inspiration for the designs.
 
 ## Setting
 We all discussed ideas for what setting the game would be based in. We all agreed it will be set in an arctic military base called the E.M.C (Eclipse Mountain Complex).
+We all agreed on the idea of having the setting similar to Shadow Moses Island from Metal Gear Solid.
 
 ## Initial Phase of Props
 
